--- a/assets/css/conteudo.css
+++ b/assets/css/conteudo.css
@@ -389,6 +389,14 @@
   padding: 30px 0 20px 0;
 }
 
+.solicite-title{
+  font-size: 2em;
+  color: #fff;
+  font-weight: bold;
+  margin: 0 0 15px 0;
+  display: block;
+}
+
 .solicite-flex{
   display: -webkit-box;
   display: -ms-flexbox;
@@ -688,6 +696,11 @@
 /*SOLICITE*/
 .solicite{
   padding: 60px 0 50px 0;
+}
+
+.solicite-title{
+  font-size: 2.2em;
+  margin: 0 0 35px 0;
 }
 
 .solicite-flex{
