--- a/assets/css/conteudo.css
+++ b/assets/css/conteudo.css
@@ -5,9 +5,9 @@
 }
 
 .simulacao-btn{
-  background-color: #fdd84a;
+  background-color: #333;
   border-radius: 5px;
-  color: #306b8a;
+  color: #fff;
   font-size: 0.8em;
   text-transform: uppercase;
   padding: 10px 12px;
@@ -149,7 +149,60 @@
 
 
 
+/*ETAPAS*/
+.etapas{
+  background-image: url('../images/background/bg-etapas.jpg');
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  -ms-background-size: cover;
+  background-size: cover;
+  padding: 40px 0 30px 0;
+}
 
+.etapas-flex{
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.etapas-block{
+  width: 90%;
+  margin: 5px 0;
+}
+
+.etapa-num{
+  background-color: #444;
+  color: #fff;
+  border-radius: 100%;
+  font-size: 60px;
+  padding: 10px 29px;
+}
+
+.etapas-block h2{
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+.etapas-block p{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 100;
+}
 
 
 
@@ -451,12 +504,15 @@
 }
 
 .solicite-res{
-  background-color: #fdd84a;
-  color: #306b8a;
+  /*background-color: #fdd84a;*/
+  background-color: #444;
+  /*color: #306b8a;*/
+  color: #fff;
 }
 
 .solicite-emp{
-  background-color: #306b8a;
+  /*background-color: #306b8a;*/
+  background-color: #444;
   color: #fff;  
 }
 
@@ -474,6 +530,20 @@
   margin: 0 10px 0 0;
 }
 
+.case-image img{
+  opacity: 0.5;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;  
+}
+
+.case-image img:hover{
+  opacity: 1;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;  
+}
+
 
 
 
@@ -486,6 +556,7 @@
 
 .simulacao{
   padding: 60px 0;
+  margin: 20px 0 0 0;
 }
 
 .simulacao-btn{
@@ -499,6 +570,52 @@
 
 
 
+
+/*ETAPAS*/
+.etapas{
+  padding: 70px 0 40px 0;
+}
+
+.etapas-flex{
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;  
+}
+
+.etapas-block{
+  width: 50%;
+  margin: 0 10px;
+}
+
+.etapa-num{
+  background-color: #444;
+  color: #fff;
+  border-radius: 100%;
+  font-size: 60px;
+  padding: 10px 29px;
+}
+
+.etapas-block h2{
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: bold;
+  margin: 25px 0;
+}
+
+.etapas-block p{
+  color: #fff;
+  font-size: 20px;
+  font-weight: 100;
+}
 
 
 
@@ -526,6 +643,8 @@
   margin: auto;
   border-radius: 5px;
 }
+
+
 
 
 
@@ -674,7 +793,7 @@
 
 .sisLLL{
   width: auto;
-  margin: 30px 50px 0 -40px;
+  margin: 0px 50px 0 -40px;
 }
 
 
