--- a/assets/css/conteudo.css
+++ b/assets/css/conteudo.css
@@ -208,8 +208,8 @@
 /*ECONOMIA*/
 
 .economia{
-  padding: 20px 0 10px 0;
-  background-image: url('../images/background/09.jpg');
+  padding: 20px 0 10px 0;  
+  background-color: #2572f4;
   color: #fff;
 }
 
