--- a/assets/css/conteudo.css
+++ b/assets/css/conteudo.css
@@ -722,7 +722,7 @@
 /*ECONOMIA*/
 
 .economia{
-  background-image: url('../images/background/09.jpg');
+  background-image: url('../images/background/099.png');
   background-position: bottom right;
   background-repeat: no-repeat;
   background-attachment: fixed;
