--- a/assets/css/page-contato.css
+++ b/assets/css/page-contato.css
@@ -28,6 +28,10 @@
     cursor: pointer;
 }
 
+.end{
+    margin: 20px;
+    text-align: center;
+}
 
 
 /*************************************************************************************************/
