--- a/assets/css/page-contato.css
+++ b/assets/css/page-contato.css
@@ -29,8 +29,12 @@
 }
 
 .end{
-    margin: 20px;
+    margin: 20px 0 0 0;
     text-align: center;
+}
+
+.end strong{
+    font-size: 12px;
 }
 
 
@@ -40,5 +44,10 @@
     .contato-form{
         width: 50%;
     }
+
+.end strong{
+    font-size: 17px;
+}
+
 
 }
