--- a/style.css
+++ b/style.css
@@ -24,3 +24,4 @@ Text Domain: metodistarenovadauberlandia.com
 @import url('assets/css/page-social.css');
 @import url('assets/css/single-blog.css');
 @import url('assets/css/page-contato.css');
+@import url('assets/css/modal.css');
