--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -261,7 +261,10 @@
 
 
 
-
+.selo img{
+  margin: -20% auto 0 auto; 
+  width: 40%;
+}
 
 
 
@@ -270,6 +273,13 @@
 .logo{
   background-color: transparent; 
 }
+
+.selo img{
+  margin: -15% 0 0 0; 
+  width: 30%;
+  float: right;
+}
+
 
 }
 
@@ -282,6 +292,12 @@
 .menu{
   top: 35px;
   right: 35px;
+}
+
+.selo img{
+  margin: -15% 0 0 0; 
+  width: 30%;
+  float: right;
 }
 
 }
@@ -356,6 +372,12 @@
 }
 
 
+
+.selo img{
+  float: right;
+  margin: 60px 0 0 0;
+  width: 180px;
+}
 
 
 
