--- a/assets/css/conteudo.css
+++ b/assets/css/conteudo.css
@@ -617,6 +617,35 @@
 
 
 
+
+/*FILIAIS*/
+
+.filiais{
+  padding: 20px 0;
+}
+
+.filiais-titu{
+  margin: 0 auto 20px auto;
+  font-size: 1.7em;
+  font-weight: 700;
+}
+
+.filiais h1{
+  font-size: 1em;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.filiais p{
+  text-align: center;
+  font-size: 0.9em;
+  margin: 0 0 30px 0;
+}
+
+
+
+
+
 /*************************************************************************************************/
 @media(min-width:960px){
 
@@ -1005,6 +1034,34 @@
   color: #fff;  
 }
 
+
+
+
+
+
+/*FILIAIS*/
+
+.filiais{
+  padding: 30px 0 50px 0;
+}
+
+.filiais-titu{
+  margin: 0 auto 40px auto;
+  font-size: 1.9em;
+  font-weight: 100;
+}
+
+.filiais h1{
+  font-size: 1.4em;
+  text-align: left;
+}
+
+.filiais p{
+  text-align: left;
+  font-size: 1em;
+  margin: 0 0 0px 0;
+  text-align: justify;
+}
 
 
 
