--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -44,6 +44,7 @@
 
 .footer-img{
 	width: 170px;
+	display: none;
 }
 
 
@@ -85,6 +86,7 @@
 
 .footer-img{
 	width: 120px;
+	display: block;
 }
 
 .footer-copy strong{
