--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -260,10 +260,16 @@
 }
 
 
+.selo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .selo img{
-  margin: -20% auto 0 auto; 
-  width: 40%;
+  /*margin: -20% auto 0 auto; */
+  width: 80%;
+
 }
 
 
@@ -274,11 +280,11 @@
   background-color: transparent; 
 }
 
-.selo img{
+/*.selo img{
   margin: -15% 0 0 0; 
   width: 30%;
   float: right;
-}
+}*/
 
 
 }
@@ -294,11 +300,11 @@
   right: 35px;
 }
 
-.selo img{
+/*.selo img{
   margin: -15% 0 0 0; 
   width: 30%;
   float: right;
-}
+}*/
 
 }
 
@@ -373,11 +379,11 @@
 
 
 
-.selo img{
+/*.selo img{
   float: right;
   margin: 60px 0 0 0;
   width: 180px;
-}
+}*/
 
 
 
