--- a/style.css
+++ b/style.css
@@ -25,3 +25,4 @@ Text Domain: metodistarenovadauberlandia.com
 @import url('assets/css/single-blog.css');
 @import url('assets/css/page-contato.css');
 @import url('assets/css/modal.css');
+@import url('assets/css/single-engenharia.css');
