--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -274,6 +274,25 @@
 
 
 
+
+.tag-center{
+  font-weight: bold;
+  font-size: 0.7em;
+  color: #fff;
+  position: absolute;
+  top: -40px;
+  left: 20px;
+  display: block; 
+  text-align: center;
+  background: rgba(0,0,0,0.3);
+  text-transform: uppercase;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+
+
+
 /*************************************************************************************************/
 @media(min-width:570px){
 .logo{
@@ -285,6 +304,10 @@
   width: 30%;
   float: right;
 }*/
+
+.tag-center{
+  display: none;
+}
 
 
 }
@@ -334,10 +357,12 @@
 }
 
 .nav{
-  margin: 50px 0 0 0;
+  margin: 20px 0 0 0;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-start;
   /*display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -356,10 +381,9 @@
 }
 
 .nav li a{
-  margin: 0;
+  margin: 0 5px;
   color:rgba(255,255,255,0.7);
-  font-size: 1.5em;
-}
+  font-size: 1em;}
 
 
 .menu{
@@ -384,6 +408,13 @@
   margin: 60px 0 0 0;
   width: 180px;
 }*/
+
+.tag-center{
+  display: block;  
+  font-size: 3em;  
+  top: 120px;  
+  padding: 10px 0;
+}
 
 
 
