--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -57,23 +57,11 @@
 }
 
 .footer-flex{
-	display: -webkit-box;
-	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-orient: horizontal;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: row;
-	        flex-direction: row;
-	-ms-flex-wrap: wrap;
-	    flex-wrap: wrap;
-	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-ms-flex-line-pack: center;
-	    align-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;	    
 }
 
 .footer-link{
@@ -91,6 +79,14 @@
 
 .footer-copy strong{
 	font-size: 15px;
+}
+
+
+.zap{
+	position: fixed;
+	z-index: 100;
+	right: 100px;
+	bottom: 15px;;
 }
 
 
