--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -284,7 +284,7 @@
   left: 20px;
   display: block; 
   text-align: center;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.5);
   text-transform: uppercase;
   border-radius: 5px;
   padding: 10px;
@@ -361,8 +361,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
   /*display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -378,13 +378,16 @@
   -webkit-box-align: start !important;
       -ms-flex-align: start !important;
           align-items: flex-start !important;*/
+
+  background: rgba(0,0,0,.5);
+  padding: 0 0 0 8px !important;
 }
 
 .nav li a{
-  margin: 0 5px;
+  margin: 0 7px;
   color:rgba(255,255,255,0.9);
-  font-size: 1.4em;
-  font-weight: bold;
+  font-size: 1.2em;
+  font-weight: lighter;
 }
 
 
@@ -416,7 +419,15 @@
   font-size: 3em;  
   top: 120px;  
   padding: 10px 0;
+  font-family: sans-serif !important;
 }
+
+
+ .social-header{
+  margin: 0 5px 0 0;
+  cursor: pointer;
+  color: #fff;
+ }
 
 
 
