--- a/assets/css/page-sobre.css
+++ b/assets/css/page-sobre.css
@@ -17,20 +17,24 @@
 }
 
 .header-sobre .nav{
-    margin: 20px 0 0 0;
+    margin: 10px 0 0 0;
     display: flex;
-        flex-direction: row;
-    flex-wrap: nowrap;
-        justify-content: flex-end;
-    align-items: flex-start;   
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center; 
+    background: rgba(0,0,0,.5);
+    padding: 10px 0px !important;     
 }
 
 
+
+ 
 .header-sobre .nav li a{
-  margin: 0 5px;
+  margin: 0 7px;
   color:rgba(255,255,255,0.9);
-  font-size: 1.4em;
-  font-weight: bold;
+  font-size: 1.2em;
+  font-weight: lighter;
 }
 
 
