--- a/assets/css/conteudo.css
+++ b/assets/css/conteudo.css
@@ -657,6 +657,15 @@
 }
 
 
+.social_title{
+  text-align: center;
+  width: 100%;
+  margin: 0 0 30px 0;
+  font-size: 1.8em;
+}
+
+
+
 
 
 
@@ -1091,6 +1100,7 @@
   align-items: flex-start;
   width: 100%;
 }
+
 
 
 
