--- a/assets/css/single-cases.css
+++ b/assets/css/single-cases.css
@@ -19,7 +19,7 @@
 }
 
 .single-cases img{
-    width: 20%;
+    
 }
 
 
@@ -34,6 +34,7 @@
         text-transform: uppercase;
         font-size: 30px;
         font-weight: bold;
+        margin: 0 0 30px 0;
     }
     
     .single-cases ul{
@@ -43,12 +44,34 @@
     .single-cases li{
         text-align: left;
         list-style: none;
-        font-size: 20px;
+        font-size: 17px;
         color: #5a5a5a
     }
     
     .single-cases img{
-        width: 10%;
+        
     }
+
+
+.card-deck{
+    display: flex !important;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
+    justify-content: space-between !important;
+    align-items: flex-start !important;
+}   
+
+.card{
+    max-width: 30% !important;
+    min-width: 30% !important;
+    margin: 0 0 50px 0;
+}
+
+.card img{
+    min-height: 240px;
+    max-height: 240px;
+}
+
+
 
 }
